// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`previews resources 1`] = `
<nav
  className="TabNav"
>
  <div>
    <span
      id="TabNav-container"
    >
      <ul>
        <li>
          <a
            className="tabLink "
            href="/r/foo"
            onClick={[Function]}
          >
            Logs
          </a>
        </li>
        <li>
          <a
            className="tabLink tabLink--is-selected"
            href="/r/foo/preview"
            onClick={[Function]}
          >
            Preview
          </a>
        </li>
        <li>
          <a
            className="tabLink "
            href="/r/foo/errors"
            onClick={[Function]}
          >
            Errors
          </a>
        </li>
      </ul>
    </span>
  </div>
</nav>
`;

exports[`shows error pane 1`] = `
<nav
  className="TabNav"
>
  <div>
    <span
      id="TabNav-container"
    >
      <ul>
        <li>
          <a
            className="tabLink "
            href="/r/foo"
            onClick={[Function]}
          >
            Logs
          </a>
        </li>
        <li>
          <a
            className="tabLink "
            href="/r/foo/preview"
            onClick={[Function]}
          >
            Preview
          </a>
        </li>
        <li>
          <a
            className="tabLink tabLink--is-selected"
            href="/r/foo/errors"
            onClick={[Function]}
          >
            Errors
          </a>
        </li>
      </ul>
    </span>
  </div>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="TabNav"
>
  <div>
    <span
      id="TabNav-container"
    >
      <ul>
        <li>
          <a
            className="tabLink tabLink--is-selected"
            href="/r/foo"
            onClick={[Function]}
          >
            Logs
          </a>
        </li>
        <li>
          <a
            className="tabLink "
            href="/r/foo/preview"
            onClick={[Function]}
          >
            Preview
          </a>
        </li>
        <li>
          <a
            className="tabLink "
            href="/r/foo/errors"
            onClick={[Function]}
          >
            Errors
          </a>
        </li>
      </ul>
    </span>
  </div>
</nav>
`;

exports[`shows sail url 1`] = `
<nav
  className="TabNav"
>
  <div>
    <span
      id="TabNav-container"
    >
      <ul>
        <li>
          <a
            className="tabLink "
            href="/r/foo"
            onClick={[Function]}
          >
            Logs
          </a>
        </li>
        <li>
          <a
            className="tabLink "
            href="/r/foo/preview"
            onClick={[Function]}
          >
            Preview
          </a>
        </li>
        <li>
          <a
            className="tabLink tabLink--is-selected"
            href="/r/foo/errors"
            onClick={[Function]}
          >
            Errors
          </a>
        </li>
      </ul>
    </span>
    <span
      id="sail-url"
    >
      Share this view! 
      <a
        href="www.sail.dev/xyz"
      >
        www.sail.dev/xyz
      </a>
    </span>
  </div>
</nav>
`;
